[package]
name = "arm-neural-graphics-lib"
version = "0.1.0"
edition = "2021"
authors = ["Traverse Research <support@traverseresearch.nl>"]
license = "MIT"
homepage = "https://traverseresearch.nl"
repository = "https://github.com/Traverse-Research/arm-neural-graphics-rs"
description = "Precompiled library for ARM's neural graphics SDK"

[dependencies]
