[package]
name = "arm-neural-graphics-sys"
version = "0.1.0+v1.1.3"
authors = ["Traverse Research <support@traverseresearch.nl>"]
edition = "2021"
license = "MIT"
homepage = "https://traverseresearch.nl"
repository = "https://github.com/Traverse-Research/arm-neural-graphics-rs"
description = "Low-level sys bindings for ARM's neural graphics SDK"
include = ["src", "LICENSE"]
categories = ["rendering", "graphics", "external-ffi-bindings"] # https://crates.io/category_slugs
keywords = ["arm-neural-graphics", "nss", "vulkan"]
rust-version = "1.74"

[dependencies]
libloading = "0.8"
ash = { git = "https://github.com/Traverse-Research/ash", rev = "e589cf77", optional = true, default-features = false }

[features]
default = ["vulkan"]
vulkan = ["dep:ash"]
dx12 = []
